[tool.poetry]
name = "pynmea_to_xls"
version = "0.1.0"
description = ""
authors = ["Bruno PILLET <bruno.pillet@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pynmea2 = "^1.18.0"
pandas = "^1.4.1"
xlwt = "^1.3.0"
openpyxl = "^3.0.9"
click = "^8.0.4"
pyinstaller = "^4.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
